...
    @State var presentLogoutDialog = false // State to control the logout confirmation dialog.
    
    @State var isLoadingLogout : Bool = false
    
    var body: some View {
        
        PeptideTemplateView(toolbarConfig: .init(isVisible: true, title: "Settings")){_,_ in
            
            
            VStack(spacing: .spacing4){
                
                Button(action:{
                    viewState.path.append(NavigationDestination.user_settings)
...
            
            ConfirmationSheet(
                isPresented: $presentLogoutDialog,
                isLoading: $isLoadingLogout,
                title: "Are you sure?",
                subTitle: "You can login with the same account or another one after logout.",
                confirmText: "Yes",
                dismissText: "Wait!",
                popOnConfirm: false
            ){
                Task {

                    //isLoadingLogout = true
...
